13 November 2017: Wouter 
	- Fix #2801: Install libunbound.pc.
	- Fix qname minimisation to send AAAA queries at zonecut like type A.
	- reverted AAAA change.

7 November 2017: Wouter 
	- Fix #2492: Documentation libunbound.

3 November 2017: Wouter 
	- Fix #2362: TLS1.3/openssl-1.1.1 not working.
	- Fix #2034 - Autoconf and -flto.
	- Fix #2141 - for libsodium detect lack of entropy in chroot, print
	  a message and exit.

2 November 2017: Wouter 
	- Fix #1913: ub_ctx_config is under circumstances thread-safe.
	- make ip-transparent option work on OpenBSD.

31 October 2017: Wouter 
	- Document that errno is left informative on libunbound config read
	  fail.
	- lexer output.
	- iana port update.

25 October 2017: Ralph
	- Fixed libunbound manual typo.
	- Fix #1949: [dnscrypt] make provider name mismatch more obvious.
	- Fix #2031: Double included headers

24 October 2017: Ralph
	- Update B root ipv4 address.

19 October 2017: Wouter 
	- authzone work, probe timer setup.

18 October 2017: Wouter 
	- lint for recent authzone commit.

17 October 2017: Wouter 
	- Fix #1749: With harden-referral-path: performance drops, due to
	  circular dependency in NS and DS lookups.
	- [dnscrypt] prevent dnscrypt-secret-key, dnscrypt-provider-cert
	  duplicates
	- [dnscrypt] introduce dnscrypt-provider-cert-rotated option,
	  from Manu Bretelle.
	This option allows handling multiple cert/key pairs while only
	distributing some of them.
	In order to reliably match a client magic with a given key without
	strong assumption as to how those were generated, we need both key and
	cert. Likewise, in order to know which ES version should be used.
	On the other hand, when rotating a cert, it can be desirable to only
	serve the new cert but still be able to handle clients that are still
	using the old certs's public key.
	The `dnscrypt-provider-cert-rotated` allow to instruct unbound to not
	publish the cert as part of the DNS's provider_name's TXT answer.