@@ -1,3 +1,7 @@
+14 November 2017: Wouter 
+	- Fix #2882: Unbound behaviour changes (wrong) when domain-insecure is
+	  set for stub zone.  It no longer searches for DNSSEC information.
+
 13 November 2017: Wouter 
 	- Fix #2801: Install libunbound.pc.
 	- Fix qname minimisation to send AAAA queries at zonecut like type A.
